 <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/ferma"
        tools:context="com.fupm.skeb.androidclient.GameFragment">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/tryNumber"
            android:hint="@string/tryNumber"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_toStartOf="@+id/buttonSet"
            android:layout_toLeftOf="@+id/buttonSet"/>

        <Button
            android:layout_width="50sp"
            android:layout_height="20sp"
            android:text="@string/check"
            android:id="@+id/buttonSet"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />





        <Button
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:text="@string/riddle"
            android:id="@+id/buttonRiddle"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/buttonSet"
            android:layout_alignEnd="@+id/buttonSet" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/setRiddle"
            android:hint="@string/makeRiddle"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/buttonRiddle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ScrollView
            android:layout_width="200sp"
            android:layout_height="380sp"
            android:id="@+id/scrollView1"
            android:layout_below="@+id/buttonSet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log"
                android:id="@+id/ownLog"/>
        </ScrollView>

        <ScrollView
            android:layout_width="120sp"
            android:layout_height="380sp"
            android:id="@+id/scrollView2"
            android:layout_alignBottom="@+id/buttonChat"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log"
                android:id="@+id/enemyLog"/>
        </ScrollView>

        <Button
            android:layout_width="60sp"
            android:layout_height="25sp"
            android:text="@string/Chat"
            android:id="@+id/buttonChat"
            android:layout_alignBottom="@+id/scrollView1"
            android:layout_alignLeft="@+id/scrollView2"
            android:layout_alignStart="@+id/scrollView2"
            android:layout_alignRight="@+id/scrollView2"
            android:layout_alignEnd="@+id/scrollView2" />

     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bar"
         android:id="@+id/bar"
         android:layout_alignBottom="@+id/buttonRiddle"
         android:layout_toRightOf="@+id/setRiddle"
         android:layout_alignRight="@+id/buttonRiddle"
         android:layout_alignEnd="@+id/buttonRiddle" />

 </RelativeLayout>

