<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/relativeLayout"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ferma"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="110sp"
        android:layout_height="50sp"
        android:text="@string/button2"
        android:id="@+id/btnResult"
        android:layout_below="@+id/btnActTwo"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_margin="10sp" />

    <Button
        android:layout_width="110sp"
        android:layout_height="50sp"
        android:text="@string/game"
        android:id="@+id/btnActTwo"
        android:layout_gravity="center"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/btnResult"
        android:layout_alignStart="@+id/btnResult"
        android:layout_alignRight="@+id/btnResult"
        android:layout_alignEnd="@+id/btnResult" />

    <Button
        android:layout_width="120sp"
        android:layout_height="25sp"
        android:text="@string/change"
        android:id="@+id/change"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnResult"
        android:layout_alignEnd="@+id/btnResult" />

</RelativeLayout>