<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fupm.skeb.androidclient.OnlineGame"
    android:background="@drawable/ferma">

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/check"
    android:id="@+id/buttonSet"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:onClick="onClick"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="4"
        android:id="@+id/tryNumber"
        android:hint="@string/tryNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/buttonSet" />



<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/riddle"
    android:id="@+id/buttonRiddle"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/buttonSet"
    android:layout_alignEnd="@+id/buttonSet"
    android:layout_toRightOf="@+id/ScrollView1"
    android:layout_toEndOf="@+id/ScrollView1" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:ems="4"
    android:id="@+id/setRiddle"
    android:hint="@string/makeRiddle"
    android:layout_below="@+id/ScrollView1"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignBottom="@+id/buttonRiddle"
    android:layout_toLeftOf="@+id/buttonRiddle"
    android:layout_toStartOf="@+id/buttonRiddle" />

<ListView
    android:layout_width="200sp"
    android:layout_height="450sp"
    android:id="@+id/listView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/buttonSet" />

<ListView
    android:layout_width="150sp"
    android:layout_height="450sp"
    android:id="@+id/listView2"
    android:layout_below="@+id/tryNumber"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />


</RelativeLayout>
